WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170016
Let the UI process do memory kills and replace crashes with diagnostic logging.
https://bugs.webkit.org/show_bug.cgi?id=170016
Summary
Let the UI process do memory kills and replace crashes with diagnostic logging.
Andreas Kling
Reported
2017-03-23 12:08:41 PDT
<
rdar://problem/31091292
>
Attachments
Patch
(10.91 KB, patch)
2017-03-23 12:14 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(10.06 KB, patch)
2017-03-23 12:17 PDT
,
Andreas Kling
cdumez
: review+
cdumez
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(10.92 KB, patch)
2017-03-23 14:36 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2017-03-23 12:14:06 PDT
Created
attachment 305211
[details]
Patch
Build Bot
Comment 2
2017-03-23 12:16:40 PDT
Attachment 305211
[details]
did not pass style-queue: ERROR: Source/WebCore/page/PerformanceMonitor.cpp:51: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2017-03-23 12:17:19 PDT
Created
attachment 305212
[details]
Patch
Chris Dumez
Comment 4
2017-03-23 12:29:26 PDT
Comment on
attachment 305212
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305212&action=review
r=me with comments.
> Source/WebKit2/ChangeLog:13 > + Also add drive-by diagnostic logging for background CPU limit kills.
thank you
> Source/WebKit2/UIProcess/WebProcessProxy.cpp:1131 > +void WebProcessProxy::simulateProcessCrash(const String& reason)
I think this should take in an enum rather than a logging key. Logging is internal logic and I don't like that call sites have to pass in a logging key.
> Source/WebKit2/UIProcess/WebProcessProxy.h:169 > + void simulateProcessCrash(const String& reason);
Could be private.
Andreas Kling
Comment 5
2017-03-23 14:36:12 PDT
Created
attachment 305227
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2017-03-23 14:38:32 PDT
Comment on
attachment 305227
[details]
Patch for landing Rejecting
attachment 305227
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 305227, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/3397585
WebKit Commit Bot
Comment 7
2017-03-23 15:21:35 PDT
Comment on
attachment 305227
[details]
Patch for landing Clearing flags on attachment: 305227 Committed
r214320
: <
http://trac.webkit.org/changeset/214320
>
WebKit Commit Bot
Comment 8
2017-03-23 15:21:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug