Let the UI process do memory kills and replace crashes with diagnostic logging. <https://webkit.org/b/170016> <rdar://problem/31091292>

Reviewed by Chris Dumez.

Source/WebCore:

Remove the memory kill code from WebCore that just crashes in favor of controlled
teardown from UI process side in WebKit2.

* page/DiagnosticLoggingKeys.cpp:
(WebCore::DiagnosticLoggingKeys::simulatedProcessCrashKey):
(WebCore::DiagnosticLoggingKeys::exceededActiveMemoryLimitKey):
(WebCore::DiagnosticLoggingKeys::exceededInactiveMemoryLimitKey):
(WebCore::DiagnosticLoggingKeys::exceededBackgroundCPULimitKey):
* page/DiagnosticLoggingKeys.h:
* page/MemoryRelease.cpp:
(WebCore::didExceedMemoryLimitAndFailedToRecover): Deleted.
* page/MemoryRelease.h:

Source/WebKit2:

Have the WebProcess memory kill callback send a notification to the UI process
instead of outright crashing. The UI process then sends a diagnostic logging message
before carefully taking down the web process.

Also add drive-by diagnostic logging for background CPU limit kills.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::simulateProcessCrash):
(WebKit::WebProcessProxy::didExceedActiveMemoryLimit):
(WebKit::WebProcessProxy::didExceedInactiveMemoryLimit):
(WebKit::WebProcessProxy::didExceedBackgroundCPULimit):
* UIProcess/WebProcessProxy.h:
* UIProcess/WebProcessProxy.messages.in:
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):


Canonical link: https://commits.webkit.org/186946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214320 268f45cc-cd09-0410-ab3c-d52691b4dbfc